# core-drill

./: .gitignore  CLAUDE.md  Cargo.toml  DEMO.md  README.md  dist-workspace.toml  flake.nix  justfile
.claude/: settings.local.json
.github/workflows/: release.yml
DOCS/: features.md  icechunk-rust-api.md  icechunk-v2-format.md  ui-design.md  zellij-integration.md
PLANNING/: architecture.md  next-session.md  roadmap.md
scripts/: create_adversarial_repo.py  create_mixed_chunks_repo.py  create_virtual_test_repo.py
src/: app.rs  cli.rs  codegen.rs  config.rs  fetch.rs  main.rs  mcp.rs  multiplexer.rs  output.rs  repo.rs  sanitize.rs  search.rs  theme.rs  tui.rs  util.rs
src/app/: keys.rs  mod.rs  tree.rs
src/component/: mod.rs
src/output/: format.rs  mod.rs
src/store/: mod.rs  stats.rs  types.rs
src/ui/: bottom.rs  detail.rs  diff.rs  format.rs  help.rs  json_view.rs  mod.rs  overview.rs  shape_viz.rs  tree.rs  widgets.rs
src/ui/detail/: array.rs  branch.rs  group.rs  mod.rs  ops_log.rs  repo.rs
