[package]
name = "core-drill"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for inspecting Icechunk V2 repositories"
license = "MIT"

[[bin]]
name = "core-drill"
path = "src/main.rs"

[dependencies]
# Icechunk — the library does all format parsing and storage I/O
icechunk = "2.0.0"

# Arraylake — credential vending for cloud repos
arraylake = { path = "../arraylake/arraylake-rs" }

# TUI framework
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-input = "0.11"
tui-tree-widget = "0.24"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization (structured output mode)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling and logging
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP server (agent tooling)
rmcp = { version = "1", features = ["server", "transport-io"] }
schemars = "0.8"

# Fuzzy search
nucleo = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
humansize = "2"
strip-ansi-escapes = "0.2"

[profile.release]
lto = true
